fix: overflow bug

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -117,7 +117,6 @@ pre {
   border-radius: 8px;
   overflow: auto;
   box-shadow: 6px 6px 0 hsl(30deg 100% 45% / 6%);
-  overflow-x: clip;
 }
 
 code > span {
